//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.

----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        
    Fixes:
        - Fix icon rendering.
----------------------------------------------------------------------------------------------------------------------
Version: 2.14.0
Date: June 15th 2025
    Features:
        - Module templates can be automatically applied to new recipe rows, on a per-template basis.
    Fixes:
        - Personal equipment names are localized again.
        - Quality prompts from dropdowns now also appear in subsequent selection panels.
        - Fix output temperature selection for recipes that didn't specify the output fluid temperature.
----------------------------------------------------------------------------------------------------------------------
Version: 2.13.0
Date: May 14th 2025
    Features:
        - Add support for exporting all building entities to one blueprint.
        - Support for new burner fuel inventory. Exported entities will now have burner fuel inventory slot set as filter (Configurable in preferences).
        - When Factorio updates Defines.lua, update it as automatically as possible.
    Fixes:
        - Fix issue when trying to export blueprint with modules (Key "count" was not found in property tree...)
        - Update Defines.lua for Factorio 2.0.49. (Yafc also still works with 2.0.47.)
    Internal Changes:
        - Upgrade Blueprint classes to support new logistic filter sections.
----------------------------------------------------------------------------------------------------------------------
Version: 2.12.0
Date: May 12th 2025
    Features:
        - When changing the language for Factorio objects, automatically switch to, or download, a font that can
          display that language.