@@ -22,6 +22,7 @@ Date:
         
     Fixes:
         - Fix icon rendering.
+        - Hide fluid temperature options when not part of a recipe or not accepted by that recipe.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.14.0
 Date: June 15th 2025
